# crashdump_uploader

./: .gitignore  Cargo.toml  README.md
src/: file.rs  mail.rs  main.rs
